<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.codefarm</groupId>
	<artifactId>spring-parent</artifactId>
	<packaging>pom</packaging>


	<version>4.2.4</version>
	<modules>
		<module>springside-core</module>
		<module>springside-extension</module>
		<module>springside-util</module>
		<module>spring-test</module>
		<module>spring-quartz</module>
		<module>spring-jsoup</module>
		<module>spring-shiro-x509</module>
		<module>spring-freemarker</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>net.sf.dozer</groupId>
				<artifactId>dozer</artifactId>
				<version>${dozer.version}</version>
			</dependency>
			<!-- Security begin -->
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-web</artifactId>
				<optional>true</optional>
				<version>${shiro.version}</version>
			</dependency>
			<dependency>
				<groupId>bouncycastle</groupId>
				<artifactId>bcprov-jdk16</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			<!-- Security end -->

			<!-- Web begin -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet.version}</version>
				<scope>provided</scope>
			</dependency>
			<!-- Wed end -->

			<!-- UTILS begin -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.module</groupId>
				<artifactId>jackson-module-jaxb-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<optional>true</optional>
				<version>${hibernate.validator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>
			<!-- UTILS end -->

			<!-- LOGGING begin -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<optional>true</optional>
				<version>${slf4j.version}</version>
			</dependency>
			<!-- LOGGING end -->

			<!-- TEST begin -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-jpa</artifactId>
				<version>1.6.0.RELEASE</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<properties>
		<freemarker.version>2.3.20</freemarker.version>
		<hibernate.version>4.3.5.Final</hibernate.version>
		<spring.version>4.2.4.RELEASE</spring.version>
		<shiro.version>1.2.3</shiro.version>
		<servlet.version>3.1.0</servlet.version>
		<jackson.version>2.4.2</jackson.version>
		<hibernate.validator.version>5.1.2.Final</hibernate.validator.version>
		<junit.version>4.11</junit.version>
		<assertj.version>1.6.1</assertj.version>
		<mockito.version>1.9.5</mockito.version>
		<slf4j.version>1.7.7</slf4j.version>
		<commons.lang3.version>3.3.2</commons.lang3.version>
		<java.version>1.8</java.version>
		<dozer.version>5.5.1</dozer.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<bouncycastle.version>140</bouncycastle.version>
		<codefarm.version>4.2.4</codefarm.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.1</version>
				<configuration>
					<skip>true</skip>
					<!-- <redirectTestOutputToFile>true</redirectTestOutputToFile> -->
					<argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
					<!-- Force alphabetical order to have a reproducible build -->
					<runOrder>alphabetical</runOrder>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9</version>
					</dependency>
				</dependencies>
				<configuration>
					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>fhcard</id>
			<name>Local Nexus Repository</name>
			<url>http://scm.fhcard.com:8081/nexus/content/repositories/fhcard/</url>
		</repository>
		<!-- <snapshotRepository>
			<id>nexus-snapshots</id>
			<name>Local Nexus Repository</name>
			<url>http://192.168.1.217:8080/nexus/content/groups/public</url>
		</snapshotRepository> -->
	</distributionManagement>
</project>